# npc-game

./: .gitignore  Attack.cpp  Attack.h  Button.cpp  Button.h  CMakeLists.txt  Doxyfile  Draw.cpp  Draw.h  EventLoops.cpp  EventLoops.h  GameState.cpp  GameState.h  Globals.cpp  Globals.h  Include.h  Keybind.cpp  Keybind.h  LICENSE  LICENSE-ClearSansFont  Library.cpp  Main.cpp  Main.h  Party.cpp  Party.h  README.md  Render.cpp  Render.h  Sprite.cpp  Sprite.h  Terr.cpp  Terr.h  Terrain.cpp  Terrain.h  Tile.cpp  Tile.h  Timer.cpp  Timer.h  Unit.cpp  Unit.h  (+3 more)
Documentation/html/: _attack_8h_source.html  _button_8h_source.html  _draw_8h_source.html  _event_loops_8h_source.html  _game_state_8h_source.html  _globals_8h_source.html  _keybind_8h_source.html  _party_8h_source.html  _render_8h_source.html  _sprite_8h_source.html  _terr_8h_source.html  _tile_8h_source.html  _timer_8h_source.html  _unit_8h_source.html  _warp_8h_source.html  annotated.html  class_attack-members.html  class_attack.html  class_button-members.html  class_button.html  class_game_state-members.html  class_game_state.html  class_party-members.html  class_party.html  class_sprite-members.html  class_sprite.html  class_terr-members.html  class_terr.html  class_tile-members.html  class_tile.html  class_unit-members.html  class_unit.html  class_warp-members.html  class_warp.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  (+3 more)
Documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_5.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  (+20 more)
Documentation/latex/: annotated.tex  class_attack.tex  class_button.tex  class_game_state.tex  class_party.tex  class_sprite.tex  class_terr.tex  class_tile.eps  class_tile.tex  class_unit.tex  class_warp.eps  class_warp.tex  hierarchy.tex  md_README.tex  refman.tex
resources/: Map0,0.txt  Map0,1.txt  Map1.txt  Map2.txt
resources/enemies/: Guard.txt
resources/maps/: 0,0.txt  0,1.txt  0,2.txt  Map0,0.txt  Map0,1.txt
resources/scripts/: FightTest.txt  HealTest.txt  SpeechTest.txt
